syntax = "proto3";

package com.meishubao.protobuf.protocol;

message UserInfoRequest {
    int64 userId = 1;
}
message UserInfoResponse {
    int32 userType = 1;
    string mobile = 2;
}